--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 .search-bar > input {
   width: 100%;
   border: none;
+  padding-left: 15px;
 }
 
 .search-bar > input::placeholder {
@@ -31,12 +32,13 @@
 .items-list {
   display: flex;
   overflow-x: auto;
+  width: 1300px;
   margin-inline: 104px;
 }
 
 .items-list > .item {
   white-space: nowrap;
-  width: 50%;
+  width: 1280px;
   margin-inline: 13px;
 }
 
@@ -52,21 +54,23 @@
 }
 
 .heading {
-  margin-top: 50px;
+  margin-top: 27px;
   margin-left: 85px;
 }
 
 .Dairy-container {
-  margin-top: 50px;
-  display: flex;
+  width: 88rem;
+  margin-top: 20px;
+  height: 23rem;
+  display: block;
   flex-direction: column;
   justify-content: center;
-  margin-inline: 79px;
+  margin-inline: 67px;
   overflow-x: auto;
 }
-
 .card {
-  width: 193px;
+  width: 180px;
+  height: 342px;
 }
 
 .card-body {
@@ -76,8 +80,8 @@
 .Dairy-items {
   display: flex;
   flex-direction: row;
-  height: 24rem;
-  width: 1845px;
+  height: 18rem;
+  width: 1770px;
 }
 
 .timer {
@@ -90,8 +94,8 @@
 
 .item-name {
   font-weight: bold;
-  width: 100%;
-  height: 64px;
+  width: 115%;
+  height: 54px;
 }
 
 .price {
@@ -109,4 +113,12 @@
   font-size: 13px;
   background-color: rgb(247, 255, 249);
   border-radius: 0.375rem;
+}
+
+
+.footer{
+  margin: 12px;
+  padding-top: 12px;
+  display: flex;
+  justify-content: center;
 }
